--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
     "@types/three": "0.156.0",
-    "@vitejs/plugin-react": "4.0.3",
+    "@vitejs/plugin-react": "^4.7.0",
     "typescript": "^5.2.2",
-    "vite": "^4.4.10"
+    "vite": "^7.3.1"
   },
   "dependencies": {
-    "firebase": "10.5.2",
+    "firebase": "^12.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.18.0",
+    "react-router-dom": "^6.30.3",
     "three": "0.152.2",
     "uuid": "^9.0.1"
   }
